--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,6 @@
 
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
+
+Gilbert Segakweng <shn.shane@gmail.com>
+Banele Mncube <mncubebanele@gmail.com>
